<?xml version="1.0"?>
<package>
  <name>visual_inertial_map_structure</name>
  <version>0.0.0</version>
  <description>The visual_inertial_map_structure package</description>

  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>
  <maintainer email="dev@titus-c.ch">Titus Cieslewski</maintainer>
  <maintainer email="dymczykm@student.ethz.ch">Marcin Dymczyk</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>aslam_cv</build_depend>
  <build_depend>aslam_posegraph</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>gflags_catkin</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>map_api</build_depend>
  <build_depend>map_api_map_structure</build_depend>
  <build_depend>multiagent_mapping_common</build_depend>
  <build_depend>protobuf_catkin</build_depend>
  <build_depend>viwls_graph</build_depend>
</package>
