<?xml version="1.0"?>
<package format="2">
  <name>multiprocess_gtest</name>
  <version>0.0.0</version>
  <description>The aslam map api test package</description>
  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>
  <maintainer email="dev@titus-c.ch">Titus Cieslewski</maintainer>
  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
</package>
