<?xml version="1.0"?>
<package format="2">
  <name>multiprocess_gtest</name>
  <version>0.0.0</version>
  <description>The aslam map api test package</description>
  <maintainer email="simon.lynen@gmail.com">simonlynen</maintainer>
  <maintainer email="dev@titus-c.ch">tcies</maintainer>
  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
</package>
